--- a/recipes.html
+++ b/recipes.html
@@ -114,7 +114,7 @@
         
                 <h3>Additional Food images</h3>
                 <div class = "recipe_add">
-                    <img src="images/dinner_spread.JPEG" width = "200" alt="Four white bowls filled with pesto pasta. ">
+                    <img src="images/dinner_spread.jpeg" width = "200" alt="Four white bowls filled with pesto pasta. ">
                     <img src="images/pesto-on-a-baguette.jpeg" width = "200" alt="Pesto spread on a small slice of white bread. ">
                     <img src="images/pesto-eggs.jpeg" width = "200" alt="Sunny-side-up eggs cooked in pesto on 2 slices of bread on a white plate.">
                 </div>
